--- a/main.html
+++ b/main.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
+	  <title>Welcome to Accio Jobs!</title>
   </head>
   <body>
     <table style="width: 100%; height: 100%">
       <!-- Your code here -->
+		<h1>Welcome to Accio Jobs!</h1>
+
+		<img src="{https://example.com/your-image.jpg" alt="Image description" height="300px">
+
+		<p> software program devloper profession path</p>
+
+		<ul> 
+			<li>cloud development</li>
+			<li>desktop development</li>
+			<li>vedio Game development</li>
+			<li>Mobile development</li>
+			<li>Web development</li>
+		</ul>
     </table>
   </body>
 </html>
